Thu Dec  3 16:02:17 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_obj_as_string): fstring should not be infected.
	  TODO: other frozen strings also may not be.

Thu Dec  3 15:39:21 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/scanf.rb: fixed double words typo.
	  [ci skip][fix GH-1123] Patch by @jwworth

Thu Dec  3 15:37:56 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/ruby/test_mixed_unicode_escapes.rb: fixed typo.
	  [fix GH-1122] Patch by @davydovanton
	* test/ruby/test_object.rb: ditto.
	* test/socket/test_tcp.rb: ditto.

Thu Dec  3 15:33:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): fix wrong shifting position in
	  Rational conversion when not at the beginning of the result.
	  [ruby-core:71806] [Bug #11766]

Thu Dec  3 14:22:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_to_s): should be infected by the receiver.
	  str2 infects by appending.  [ruby-core:71811] [Bug #11767]

Thu Dec  3 11:57:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: separate SET_CURRENT_THREAD_NAME, which can set
	  the name of current thread only, and SET_ANOTHER_THREAD_NAME,
	  which can set the name of other threads.

	* thread.c (rb_thread_setname): use SET_ANOTHER_THREAD_NAME.  OS X
	  is not possible to set another thread name.

	* thread_pthread.c (native_set_thread_name, thread_timer): use
	  SET_CURRENT_THREAD_NAME.

Wed Dec 02 22:57:46 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, iseq.h: remove rb_iseq_t::variable_body.
	  Fields in rb_iseq_t::variable_body are contained by
	  rb_iseq_t::body::mark_ary (hidden Array object).

	  Index 0 to 2 of mark_ary are reserved by these objects.

	* iseq.c: catch up this fix.

	* compile.c (rb_iseq_original_iseq): trivial rewrite.

Wed Dec  2 17:19:02 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_ORIGINAL_ISEQ() and
	  ISEQ_ORIGINAL_ISEQ_ALLOC() macro.

	* compile.c: use them to access original iseq buffer.
